openrouter byok wip 1
